logs/coredocs.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/coreapi'...
Listing './lib/python3.5/site-packages/coreapi/codecs'...
Listing './lib/python3.5/site-packages/coreapi/transports'...
Listing './lib/python3.5/site-packages/coreapi-2.3.3.dist-info'...
Listing './lib/python3.5/site-packages/coredocs'...
Listing './lib/python3.5/site-packages/coredocs/themes'...
Listing './lib/python3.5/site-packages/coredocs/themes/base'...
Listing './lib/python3.5/site-packages/coredocs/themes/base/templates'...
Listing './lib/python3.5/site-packages/coredocs/themes/base/templates/languages'...
Listing './lib/python3.5/site-packages/coredocs/themes/cerulean'...
Listing './lib/python3.5/site-packages/coredocs/themes/cerulean/static'...
Listing './lib/python3.5/site-packages/coredocs/themes/cerulean/static/css'...
Listing './lib/python3.5/site-packages/coredocs/themes/cerulean/static/fonts'...
Listing './lib/python3.5/site-packages/coredocs/themes/cerulean/static/img'...
Listing './lib/python3.5/site-packages/coredocs/themes/cerulean/static/js'...
Listing './lib/python3.5/site-packages/coredocs/themes/cerulean/templates'...
Listing './lib/python3.5/site-packages/coredocs/themes/slate'...
Listing './lib/python3.5/site-packages/coredocs/themes/slate/static'...
Listing './lib/python3.5/site-packages/coredocs/themes/slate/static/fonts'...
Listing './lib/python3.5/site-packages/coredocs/themes/slate/static/images'...
Listing './lib/python3.5/site-packages/coredocs/themes/slate/static/javascripts'...
Listing './lib/python3.5/site-packages/coredocs/themes/slate/static/stylesheets'...
Listing './lib/python3.5/site-packages/coredocs/themes/slate/templates'...
Listing './lib/python3.5/site-packages/coredocs-0.0.6.egg-info'...
Listing './lib/python3.5/site-packages/coreschema'...
Listing './lib/python3.5/site-packages/coreschema/encodings'...
Listing './lib/python3.5/site-packages/coreschema/templates'...
Listing './lib/python3.5/site-packages/coreschema/templates/bootstrap3'...
Listing './lib/python3.5/site-packages/coreschema/templates/bootstrap3/inputs'...
Listing './lib/python3.5/site-packages/coreschema-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/itypes-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/uritemplate'...
Listing './lib/python3.5/site-packages/uritemplate-3.0.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
